--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
+    android:keepScreenOn="true"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/current_speed"
-        android:layout_width="413dp"
-        android:layout_height="396dp"
+        android:layout_width="wrap_content"
+        android:layout_height="184dp"
         android:layout_alignParentStart="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -19,7 +20,7 @@
         android:layout_alignParentBottom="false"
         android:layout_marginLeft="-2dp"
         android:layout_marginTop="90dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginRight="2dp"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="72sp"
@@ -36,5 +37,18 @@
         android:layout_marginRight="71dp"
         android:layout_marginBottom="38dp"
         android:text="@string/settings_button" />
+
+    <TextView
+        android:id="@+id/heart_rate"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="338dp"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="72sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
